# python-flask-server-generated/swagger_server/swagger/swagger.yaml
@@ -23,7 +23,7 @@ schemes:
 - "https"
 - "http"
 paths:
-  /tweetanalys/{itemid}:
+  /tweetanalys/{itemid}/{times}/{seconds}:
     get:
       tags:
       - "predictor"
@@ -38,6 +38,18 @@ paths:
         in: "path"
         description: "ID of item to return"
         required: true
+        type: "string"
+        format: "byte"
+      - name: "times"
+        in: "path"
+        description: "ID of item to return"
+        required: true
+        type: "integer"
+        format: "int64"
+      - name: "seconds"
+        in: "path"
+        description: "ID of item to return"
+        required: true
         type: "integer"
         format: "int64"
       responses:
@@ -48,7 +60,38 @@ paths:
       security:
       - BasicAuth: []
       x-swagger-router-controller: "swagger_server.controllers.predictor_controller"
-  /tweetanalys/getresult/{itemid}:
+  /tweetanalys/getresult/{itemid}/{outputstate}:
+    get:
+      tags:
+      - "predictor"
+      summary: "predict the salses"
+      description: "Returns a single number for the salse"
+      operationId: "get_result_tweet_id_status"
+      produces:
+      - "application/json"
+      - "text/html"
+      parameters:
+      - name: "itemid"
+        in: "path"
+        description: "ID of item to return"
+        required: true
+        type: "integer"
+        format: "int64"
+      - name: "outputstate"
+        in: "path"
+        description: "ID of item to return"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Pet not found"
+      security:
+      - BasicAuth: []
+      x-swagger-router-controller: "swagger_server.controllers.predictor_controller"
+  /tweetanalys/getresult/{itemid}/:
     get:
       tags:
       - "predictor"
@@ -56,6 +99,7 @@ paths:
       description: "Returns a single number for the salse"
       operationId: "get_result_tweet_id"
       produces:
+      - "application/json"
       - "text/html"
       parameters:
       - name: "itemid"
